# Taller1-primerCorte-Vision

./: .gitignore  CMakeLists.txt  README.md  punto1.cpp  punto2.cpp  punto2b.cpp  punto3a.cpp  punto3b.cpp  punto4a.cpp  punto4b.cpp
